syntax = "proto3";

package microshopping;

option go_package = "./proto;microshopping";

// -----------------货币服务 Currency service-----------------

// 货币服务接口
service CurrencyService {
  // 获得支持的货币
  rpc GetSupportedCurrencies(Empty) returns (GetSupportedCurrenciesResponse) {}
  // 转换
  rpc Convert(CurrencyConversionRequest) returns (Money) {}
}

message Empty {}

// 当前币种描述
message Money {
  // 货币code 例如：EUR 欧元 USD 美元
  string currency_code = 1;

  // 货币单位
  //  例如，如果currencyCode是USD，则1个单位是1美元。
  int64 units = 2;

  //数量的纳米（10^-9）单位。
  //该值必须介于-99999999和+99999999之间。
  //如果单位为正，纳米必须为正或零。
  //如果单位为零，纳米可以为正、零或负。
  //如果单位为负，纳米必须为负或零。

  //例如，$-1.75表示为 单位＝-1 和 纳米＝-75000000。
  int32 nanos = 3;
}

// 获得支持的币种响应消息
message GetSupportedCurrenciesResponse {
  // 返回字符串切片
  repeated string currency_codes = 1;
}

// 货币转换请求消息
message CurrencyConversionRequest {
  Money from = 1;
  string to_code = 2;
}